feat: add batch query api for items (#10)
