# models/batch_item_request.go
@@ -1,0 +1,82 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// BatchItemRequest batch item request
+//
+// swagger:model BatchItemRequest
+type BatchItemRequest struct {
+
+	// item ids
+	// Example: [1,2,3]
+	// Max Items: 10
+	// Min Items: 1
+	Ids []int64 `json:"ids"`
+}
+
+// Validate validates this batch item request
+func (m *BatchItemRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateIds(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *BatchItemRequest) validateIds(formats strfmt.Registry) error {
+	if swag.IsZero(m.Ids) { // not required
+		return nil
+	}
+
+	iIdsSize := int64(len(m.Ids))
+
+	if err := validate.MinItems("ids", "body", iIdsSize, 1); err != nil {
+		return err
+	}
+
+	if err := validate.MaxItems("ids", "body", iIdsSize, 10); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this batch item request based on context it is used
+func (m *BatchItemRequest) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *BatchItemRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *BatchItemRequest) UnmarshalBinary(b []byte) error {
+	var res BatchItemRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
