# restapi/operations/item/batch_item_responses.go
@@ -1,0 +1,146 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package item
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/bnb-chain/mind-marketplace-backend/models"
+)
+
+// BatchItemOKCode is the HTTP code returned for type BatchItemOK
+const BatchItemOKCode int = 200
+
+/*BatchItemOK successful operation
+
+swagger:response batchItemOK
+*/
+type BatchItemOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.BatchItemResponse `json:"body,omitempty"`
+}
+
+// NewBatchItemOK creates BatchItemOK with default headers values
+func NewBatchItemOK() *BatchItemOK {
+
+	return &BatchItemOK{}
+}
+
+// WithPayload adds the payload to the batch item o k response
+func (o *BatchItemOK) WithPayload(payload *models.BatchItemResponse) *BatchItemOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the batch item o k response
+func (o *BatchItemOK) SetPayload(payload *models.BatchItemResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *BatchItemOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// BatchItemBadRequestCode is the HTTP code returned for type BatchItemBadRequest
+const BatchItemBadRequestCode int = 400
+
+/*BatchItemBadRequest Bad Request
+
+swagger:response batchItemBadRequest
+*/
+type BatchItemBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewBatchItemBadRequest creates BatchItemBadRequest with default headers values
+func NewBatchItemBadRequest() *BatchItemBadRequest {
+
+	return &BatchItemBadRequest{}
+}
+
+// WithPayload adds the payload to the batch item bad request response
+func (o *BatchItemBadRequest) WithPayload(payload *models.Error) *BatchItemBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the batch item bad request response
+func (o *BatchItemBadRequest) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *BatchItemBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// BatchItemInternalServerErrorCode is the HTTP code returned for type BatchItemInternalServerError
+const BatchItemInternalServerErrorCode int = 500
+
+/*BatchItemInternalServerError internal server error
+
+swagger:response batchItemInternalServerError
+*/
+type BatchItemInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewBatchItemInternalServerError creates BatchItemInternalServerError with default headers values
+func NewBatchItemInternalServerError() *BatchItemInternalServerError {
+
+	return &BatchItemInternalServerError{}
+}
+
+// WithPayload adds the payload to the batch item internal server error response
+func (o *BatchItemInternalServerError) WithPayload(payload *models.Error) *BatchItemInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the batch item internal server error response
+func (o *BatchItemInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *BatchItemInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
