# swagger.yaml
@@ -255,6 +255,37 @@ paths:
           schema:
             $ref: "#/definitions/Error"
 
+  /item/batch:
+    post:
+      tags:
+        - "item"
+      summary: "Get items in batch"
+      operationId: "batchItem"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          required: true
+          schema:
+            $ref: "#/definitions/BatchItemRequest"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/BatchItemResponse"
+        "400":
+          description: 'Bad Request'
+          schema:
+            $ref: "#/definitions/Error"
+        "500":
+          description: 'internal server error'
+          schema:
+            $ref: "#/definitions/Error"
+
+
   /purchase/{purchaseId}:
     get:
       tags:
@@ -385,7 +416,7 @@ definitions:
     properties:
       code:
         type: integer
-        description: "code defined by api,not equal to http code"
+        description: "code defined by api, not equal to http code"
         example: 2000
       message:
         type: string
@@ -469,7 +500,7 @@ definitions:
     properties:
       code:
         type: integer
-        description: "code defined by api,not equal to http code"
+        description: "code defined by api, not equal to http code"
         example: 2000
       message:
         type: string
@@ -574,7 +605,7 @@ definitions:
     properties:
       code:
         type: integer
-        description: "code defined by api,not equal to http code"
+        description: "code defined by api, not equal to http code"
         example: 2000
       message:
         type: string
@@ -592,7 +623,7 @@ definitions:
     properties:
       code:
         type: integer
-        description: "code defined by api,not equal to http code"
+        description: "code defined by api, not equal to http code"
         example: 2000
       message:
         type: string
@@ -663,6 +694,38 @@ definitions:
         minimum: 1
         maximum: 20
 
+  BatchItemRequest:
+    type: object
+    properties:
+      ids:
+        description: "item ids"
+        example: [ 1, 2, 3 ]
+        type: array
+        items:
+          type: integer
+        minItems: 1
+        maxItems: 10
+
+  BatchItemResponse:
+    type: object
+    properties:
+      code:
+        type: integer
+        description: "code defined by api, not equal to http code"
+        example: 2000
+      message:
+        type: string
+        description: "error message if there is error"
+        example: "signature invalid"
+      data:
+        type: object
+        description: "actual data for request"
+        properties:
+          items:
+            type: array
+            items:
+              $ref: "#/definitions/Item"
+
   Purchase:
     type: object
     required:
@@ -698,7 +761,7 @@ definitions:
     properties:
       code:
         type: integer
-        description: "code defined by api,not equal to http code"
+        description: "code defined by api, not equal to http code"
         example: 2000
       message:
         type: string
@@ -716,7 +779,7 @@ definitions:
     properties:
       code:
         type: integer
-        description: "code defined by api,not equal to http code"
+        description: "code defined by api, not equal to http code"
         example: 2000
       message:
         type: string
